Fixed mobile spacing top and new

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -378,10 +378,10 @@ $num: 1;
     margin: 0 25%;
   }
   .top{
-    margin-top: 80px;
+    padding-top: 15px;
   }
   .new{
-    margin-top: 80px;
+    padding-top: 15px;
   }
 }
 
